# MOE

./: .gitignore  CMakeLists.txt  README.md  common.hpp  motor_test.cpp
examples/: CMakeLists.txt  ex_arm_prop_data_collection.cpp  ex_dynamics_usage.cpp  ex_grav_comp.cpp  ex_mpc_demo.cpp  ex_mpc_demo_one_dof.cpp  ex_mpc_gen.cpp  ex_mpc_gen_one_dof.cpp  ex_rom_CSU.cpp  ex_rom_demo.cpp  ex_rom_demo_plot_data.cpp  ex_single_dof_testing.cpp  grav_comp.cpp  jeffTest.cpp
icon/: moe_icon.ai
include/MOE/: MOE.hpp
include/MOE/Control/: Trajectory.hpp  WayPoint.hpp
include/MOE/MahiOpenExo/: Joint.hpp  JointHardware.hpp  JointVirtual.hpp  MahiOpenExo.hpp  MahiOpenExoHardware.hpp  MahiOpenExoVirtual.hpp  MassProperties.hpp  Moe.hpp  MoeConfigurationHardware.hpp  MoeConfigurationVirtual.hpp  MoeMassProperties.hpp  MoeParameters.hpp  SubjectParameters.hpp  mass_properties.hpp
include/MOE/MahiOpenExo/Dynamics/: JointProperties.hpp  MoeDynamicModel.hpp  MoeMassProperties.hpp  UserParams.hpp
setup/: CMakeLists.txt  common.hpp  motor_test.cpp  pd_controller_test.cpp
src/: common.hpp  encoder_test.cpp  moe_test.cpp  pd_controller_test.cpp
src/MOE/Control/: Trajectory.cpp  WayPoint.cpp
src/MOE/MahiOpenExo/: CMakeLists.txt  Joint.cpp  JointHardware.cpp  JointVirtual.cpp  MahiOpenExo.cpp  MahiOpenExoHardware.cpp  MahiOpenExoVirtual.cpp  Moe.cpp
src/MOE/MahiOpenExo/Dynamics/: CMakeLists.txt  Friction.cpp  G.cpp  M.cpp  MoeDynamicModel.cpp  V.cpp  cas_Friction.cpp  cas_Friction_m.cpp  cas_G.cpp  cas_G_m.cpp  cas_M.cpp  cas_M_m.cpp  cas_V.cpp  cas_V_m.cpp
